[gd_scene load_steps=10 format=3 uid="uid://cnsv1ljek5oio"]

[ext_resource type="FontFile" uid="uid://c70l3gmt2ucvj" path="res://fonts/Lobster-Regular.ttf" id="1"]
[ext_resource type="FontFile" uid="uid://cc5aimvxyqo31" path="res://fonts/Merriweather-Regular.ttf" id="2"]
[ext_resource type="Script" path="res://UI/scripts/Main Menu.gd" id="3"]
[ext_resource type="AudioStream" uid="uid://dp2me4syfxuee" path="res://UI/sounds/select.ogg" id="4"]
[ext_resource type="AudioStream" uid="uid://8cg8w835tiiv" path="res://UI/sounds/load.ogg" id="5"]
[ext_resource type="AudioStream" uid="uid://cuoqp87i06tl0" path="res://UI/sounds/hover.ogg" id="6"]
[ext_resource type="AudioStream" uid="uid://ir6wd2i3rh42" path="res://UI/sounds/return.ogg" id="7"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("1")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/128/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0
cache/0/26/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/128/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/36/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/128/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/41/0/ascent = 0.0
cache/0/41/0/descent = 0.0
cache/0/41/0/underline_position = 0.0
cache/0/41/0/underline_thickness = 0.0
cache/0/41/0/scale = 1.0
cache/0/41/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/128/0 = Vector2(0, 0)
cache/0/41/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/31/0/ascent = 0.0
cache/0/31/0/descent = 0.0
cache/0/31/0/underline_position = 0.0
cache/0/31/0/underline_thickness = 0.0
cache/0/31/0/scale = 1.0
cache/0/31/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/128/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/21/0/ascent = 0.0
cache/0/21/0/descent = 0.0
cache/0/21/0/underline_position = 0.0
cache/0/21/0/underline_thickness = 0.0
cache/0/21/0/scale = 1.0
cache/0/21/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/128/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/11/0/ascent = 0.0
cache/0/11/0/descent = 0.0
cache/0/11/0/underline_position = 0.0
cache/0/11/0/underline_thickness = 0.0
cache/0/11/0/scale = 1.0
cache/0/11/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/128/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/6/0/ascent = 0.0
cache/0/6/0/descent = 0.0
cache/0/6/0/underline_position = 0.0
cache/0/6/0/underline_thickness = 0.0
cache/0/6/0/scale = 1.0
cache/0/6/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/128/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/1/0/ascent = 0.0
cache/0/1/0/descent = 0.0
cache/0/1/0/underline_position = 0.0
cache/0/1/0/underline_thickness = 0.0
cache/0/1/0/scale = 1.0
cache/0/1/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/128/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/2/0/ascent = 0.0
cache/0/2/0/descent = 0.0
cache/0/2/0/underline_position = 0.0
cache/0/2/0/underline_thickness = 0.0
cache/0/2/0/scale = 1.0
cache/0/2/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/128/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/3/0/ascent = 0.0
cache/0/3/0/descent = 0.0
cache/0/3/0/underline_position = 0.0
cache/0/3/0/underline_thickness = 0.0
cache/0/3/0/scale = 1.0
cache/0/3/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/128/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/4/0/ascent = 0.0
cache/0/4/0/descent = 0.0
cache/0/4/0/underline_position = 0.0
cache/0/4/0/underline_thickness = 0.0
cache/0/4/0/scale = 1.0
cache/0/4/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/128/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/5/0/ascent = 0.0
cache/0/5/0/descent = 0.0
cache/0/5/0/underline_position = 0.0
cache/0/5/0/underline_thickness = 0.0
cache/0/5/0/scale = 1.0
cache/0/5/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/128/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/7/0/ascent = 0.0
cache/0/7/0/descent = 0.0
cache/0/7/0/underline_position = 0.0
cache/0/7/0/underline_thickness = 0.0
cache/0/7/0/scale = 1.0
cache/0/7/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/128/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/8/0/ascent = 0.0
cache/0/8/0/descent = 0.0
cache/0/8/0/underline_position = 0.0
cache/0/8/0/underline_thickness = 0.0
cache/0/8/0/scale = 1.0
cache/0/8/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/128/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/64/0/ascent = 0.0
cache/0/64/0/descent = 0.0
cache/0/64/0/underline_position = 0.0
cache/0/64/0/underline_thickness = 0.0
cache/0/64/0/scale = 1.0
cache/0/64/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/128/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/128/0/ascent = 0.0
cache/0/128/0/descent = 0.0
cache/0/128/0/underline_position = 0.0
cache/0/128/0/underline_thickness = 0.0
cache/0/128/0/scale = 1.0
cache/0/128/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/128/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/128/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/128/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/128/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/128/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/128/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/128/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/128/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/128/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/128/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/128/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/128/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/128/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/128/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/128/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/128/0/kerning_overrides/128/0 = Vector2(0, 0)
cache/0/128/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/72/0/ascent = 0.0
cache/0/72/0/descent = 0.0
cache/0/72/0/underline_position = 0.0
cache/0/72/0/underline_thickness = 0.0
cache/0/72/0/scale = 1.0
cache/0/72/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/41/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/128/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/72/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("2")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -268.5
offset_right = 268.5
offset_bottom = 120.0
grow_horizontal = 2
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 72
text = "The Flatlands"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.0
offset_top = -128.0
offset_right = 259.0
offset_bottom = 128.0

[node name="New Game Button" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "New Game"

[node name="Continue Game Button" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Continue"

[node name="Setting Button" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Settings"

[node name="Help Button" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Help"

[node name="About Button" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "About"

[node name="Exit Button" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Exit"

[node name="Sounds" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HoverSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("6")

[node name="SelectSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("4")

[node name="LoadSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5")

[node name="ReturnSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("7")

[connection signal="button_down" from="ButtonContainer/New Game Button" to="." method="_on_New_Game_Button_button_down"]
[connection signal="mouse_entered" from="ButtonContainer/New Game Button" to="." method="_on_New_Game_Button_mouse_entered"]
[connection signal="pressed" from="ButtonContainer/New Game Button" to="." method="_on_New_Game_Button_pressed"]
[connection signal="mouse_entered" from="ButtonContainer/Continue Game Button" to="." method="_on_Continue_Game_Button_mouse_entered"]
[connection signal="pressed" from="ButtonContainer/Continue Game Button" to="." method="_on_Continue_Game_Button_pressed"]
[connection signal="mouse_entered" from="ButtonContainer/Setting Button" to="." method="_on_Setting_Button_mouse_entered"]
[connection signal="pressed" from="ButtonContainer/Setting Button" to="." method="_on_Setting_Button_pressed"]
[connection signal="mouse_entered" from="ButtonContainer/Help Button" to="." method="_on_Help_Button_mouse_entered"]
[connection signal="pressed" from="ButtonContainer/Help Button" to="." method="_on_Help_Button_pressed"]
[connection signal="mouse_entered" from="ButtonContainer/About Button" to="." method="_on_About_Button_mouse_entered"]
[connection signal="pressed" from="ButtonContainer/About Button" to="." method="_on_About_Button_pressed"]
[connection signal="mouse_entered" from="ButtonContainer/Exit Button" to="." method="_on_Exit_Button_mouse_entered"]
[connection signal="pressed" from="ButtonContainer/Exit Button" to="." method="_on_Exit_Button_pressed"]
